--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
 
 # Optional: Redirect for Single Page Applications (SPA)
 # Uncomment if your React app uses client-side routing
-# [[redirects]]
-#  from = "/*"
-#  to = "/index.html"
-#  status = 200
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
