logo and team section added

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,9 +9,7 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
-# Optional: Redirect for Single Page Applications (SPA)
-# Uncomment if your React app uses client-side routing
-# [[redirects]]
-#  from = "/*"
-#  to = "/index.html"
-#  status = 200
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
